force-app/main/default/objects/Lead/fields/Affected_by_C19__c.field-meta.xml
<CustomField>
    <fullName>Affected_by_C19__c</fullName>
    <label>Affected by C19</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of work</fullName>
            </value>
            <value>
                <fullName>Uncertain about work</fullName>
            </value>
            <value>
                <fullName>Unaffected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>