force-app/main/default/objects/Lead/fields/Aircall_Mobile_Format__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Mobile_Format__c</fullName>
    <formula>IF(BEGINS( MobilePhone , &quot;+61&quot;), MobilePhone,
IF(BEGINS( MobilePhone, &quot;4&quot;),&quot;+61&quot; + MobilePhone,
IF(BEGINS( MobilePhone, &quot;0&quot;), &quot;+61&quot; + TRIM(RIGHT(MobilePhone, LEN(Phone)-1 )),
IF(BEGINS( MobilePhone, &quot;+610&quot;), &quot;+61&quot; + TRIM(RIGHT(MobilePhone, LEN(Phone)-4 )),
IF(BEGINS( MobilePhone, &quot;61&quot;),&quot;+&quot; + MobilePhone,
MobilePhone)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircall Mobile Format</label>
    <type>Text</type>
</CustomField>