force-app/main/default/objects/Lead/fields/availableForConversation__c.field-meta.xml
<CustomField>
    <fullName>availableForConversation__c</fullName>
    <description>For solar quotes</description>
    <label>Available For Conversation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>