force-app/main/default/objects/Lead/fields/Broker_Marketing_Quote__c.field-meta.xml
<CustomField>
    <fullName>Broker_Marketing_Quote__c</fullName>
    <label>Broker Marketing Quote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>