force-app/main/default/objects/Lead/fields/Broker_Marketing_Quote_By__c.field-meta.xml
<CustomField>
    <fullName>Broker_Marketing_Quote_By__c</fullName>
    <formula>Owner:User.Broker_Quote_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Marketing Quote By</label>
    <type>Text</type>
</CustomField>