force-app/main/default/objects/Lead/fields/Calendly__c.field-meta.xml
<CustomField>
    <fullName>Calendly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendly</label>
    <type>Checkbox</type>
</CustomField>