force-app/main/default/objects/Lead/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <label>Calendly Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>