force-app/main/default/objects/Lead/fields/Credit_Guide_Privacy_Consent_Provided__c.field-meta.xml
<CustomField>
    <fullName>Credit_Guide_Privacy_Consent_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Guide &amp; Privacy Consent Emailed</label>
    <type>Checkbox</type>
</CustomField>