force-app/main/default/objects/Lead/fields/Credit_Guide_Privacy_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Guide_Privacy_Sent_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Guide &amp; Privacy Sent Date</label>
    <type>Checkbox</type>
</CustomField>