force-app/main/default/objects/Lead/fields/Current_Application_Sections__c.field-meta.xml
<CustomField>
    <fullName>Current_Application_Sections__c</fullName>
    <label>Current Application Sections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priorities</fullName>
            </value>
            <value>
                <fullName>Loan Recommendation</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>