force-app/main/default/objects/Lead/fields/Customer_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response__c</fullName>
    <label>Customer Response</label>
    <length>100</length>
    <type>Text</type>
</CustomField>