force-app/main/default/objects/Lead/fields/Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support__c</fullName>
    <label>Customer Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duncan Mcleod</fullName>
            </value>
            <value>
                <fullName>Michael Shanahan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>