force-app/main/default/objects/Lead/fields/Date_HLHC_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_HLHC_Created__c</fullName>
    <label>Date HLHC Created</label>
    <type>Date</type>
</CustomField>