force-app/main/default/objects/Lead/fields/Do_you_feel_in_control_of_your_finances__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_in_control_of_your_finances__c</fullName>
    <label>Do you feel in control of your finances?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>