force-app/main/default/objects/Lead/fields/Do_you_often_take_action_to_save_money__c.field-meta.xml
<CustomField>
    <fullName>Do_you_often_take_action_to_save_money__c</fullName>
    <label>Do you often take action to save money?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>