force-app/main/default/objects/Lead/fields/Happy_With_Financial_Goal_Plan__c.field-meta.xml
<CustomField>
    <fullName>Happy_With_Financial_Goal_Plan__c</fullName>
    <label>Happy With Financial Goal Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>