force-app/main/default/objects/Lead/fields/HLHC_Amount__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Amount__c</fullName>
    <label>HLHC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>