force-app/main/default/objects/Lead/fields/HLHC_Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Important_Notes__c</fullName>
    <label>HLHC Important Notes</label>
    <length>550</length>
    <type>LongTextArea</type>
</CustomField>