force-app/main/default/objects/Lead/fields/HLHC_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Interest_Rate__c</fullName>
    <label>HLHC Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>