force-app/main/default/objects/Lead/fields/HLHC_Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Interest_Rate_Type__c</fullName>
    <label>HLHC Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>