force-app/main/default/objects/Lead/fields/HLHC_Lender__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Lender__c</fullName>
    <label>HLHC Lender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>