force-app/main/default/objects/Lead/fields/HLHC_Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Monthly_Repayment__c</fullName>
    <label>HLHC Monthly Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>