force-app/main/default/objects/Lead/fields/HLHC_Offer_Outcome__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Offer_Outcome__c</fullName>
    <label>HLHC Offer Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
            <value>
                <fullName>No need</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>Deciding (future task set)</fullName>
            </value>
            <value>
                <fullName>Success HLHC Appointment Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>