force-app/main/default/objects/Lead/fields/HLHC_Property_Valuation__c.field-meta.xml
<CustomField>
    <fullName>HLHC_Property_Valuation__c</fullName>
    <label>HLHC Property Valuation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>