force-app/main/default/objects/Lead/fields/installationAddressLineOne__c.field-meta.xml
<CustomField>
    <fullName>installationAddressLineOne__c</fullName>
    <label>installationAddressLineOne</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>