force-app/main/default/objects/Lead/fields/installationAddressLineTwo__c.field-meta.xml
<CustomField>
    <fullName>installationAddressLineTwo__c</fullName>
    <label>installationAddressLineTwo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>