force-app/main/default/objects/Lead/fields/installationPostcode__c.field-meta.xml
<CustomField>
    <fullName>installationPostcode__c</fullName>
    <label>installationPostcode</label>
    <type>TextArea</type>
</CustomField>