force-app/main/default/objects/Lead/fields/installationState__c.field-meta.xml
<CustomField>
    <fullName>installationState__c</fullName>
    <label>installationState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>