force-app/main/default/objects/Lead/fields/installationSuburb__c.field-meta.xml
<CustomField>
    <fullName>installationSuburb__c</fullName>
    <label>Suburb</label>
    <type>TextArea</type>
</CustomField>