force-app/main/default/objects/Lead/fields/Is_it_easy_to_find_ways_to_save_money__c.field-meta.xml
<CustomField>
    <fullName>Is_it_easy_to_find_ways_to_save_money__c</fullName>
    <label>Is it easy to find ways to save money?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>