force-app/main/default/objects/Lead/fields/Lead_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date_Time__c</fullName>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>