force-app/main/default/objects/Lead/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <label>Lead Name</label>
    <type>TextArea</type>
</CustomField>