force-app/main/default/objects/Lead/fields/Lead_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Lead_Temperature__c</fullName>
    <formula>IF( TEXT(Timeframe__c) = &quot;Immediately&quot; || TEXT(Timeframe__c) = &quot;next 4 weeks&quot;, &quot;Hot&quot;, IF(TEXT(Timeframe__c) = &quot;next 3 months&quot;, &quot;Warm&quot;, &quot;Cold&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Temperature</label>
    <type>Text</type>
</CustomField>