force-app/main/default/objects/Lead/fields/leadType__c.field-meta.xml
<CustomField>
    <fullName>leadType__c</fullName>
    <label>leadType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>