force-app/main/default/objects/Lead/fields/Life_events_in_next_6_months__c.field-meta.xml
<CustomField>
    <fullName>Life_events_in_next_6_months__c</fullName>
    <label>Life events in next 6 months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying a home</fullName>
            </value>
            <value>
                <fullName>Buying a car</fullName>
            </value>
            <value>
                <fullName>Buying an investment property</fullName>
            </value>
            <value>
                <fullName>Renovating / DIY</fullName>
            </value>
            <value>
                <fullName>Refinancing</fullName>
            </value>
            <value>
                <fullName>Get married</fullName>
            </value>
            <value>
                <fullName>Downsizing</fullName>
            </value>
            <value>
                <fullName>Planning a holiday</fullName>
            </value>
            <value>
                <fullName>Changing jobs</fullName>
            </value>
            <value>
                <fullName>Starting a business</fullName>
            </value>
            <value>
                <fullName>Expanding business</fullName>
            </value>
            <value>
                <fullName>Planning for Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>