force-app/main/default/objects/Lead/fields/mailingAddressLineOne__c.field-meta.xml
<CustomField>
    <fullName>mailingAddressLineOne__c</fullName>
    <label>mailingAddressLineOne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>