force-app/main/default/objects/Lead/fields/mailingAddressLineTwo__c.field-meta.xml
<CustomField>
    <fullName>mailingAddressLineTwo__c</fullName>
    <label>mailingAddressLineTwo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>