force-app/main/default/objects/Lead/fields/mailingCountry__c.field-meta.xml
<CustomField>
    <fullName>mailingCountry__c</fullName>
    <label>mailingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>