force-app/main/default/objects/Lead/fields/mailingPostcode__c.field-meta.xml
<CustomField>
    <fullName>mailingPostcode__c</fullName>
    <label>mailingPostcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>