force-app/main/default/objects/Lead/fields/mailingState__c.field-meta.xml
<CustomField>
    <fullName>mailingState__c</fullName>
    <label>mailingState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>