force-app/main/default/objects/Lead/fields/mailingSuburb__c.field-meta.xml
<CustomField>
    <fullName>mailingSuburb__c</fullName>
    <label>mailingSuburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>