force-app/main/default/objects/Lead/fields/mercury__Owner_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>mercury__Owner_Mobile_Phone__c</fullName>
    <description>Used in Mercury Apex Logic.  The owner mobile phone isn&apos;t available via a lead query, so is accessed here instead.</description>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Mobile Phone</label>
    <type>Text</type>
</CustomField>