force-app/main/default/objects/Lead/fields/minimumTenSquareMetersNorthFacing__c.field-meta.xml
<CustomField>
    <fullName>minimumTenSquareMetersNorthFacing__c</fullName>
    <description>SQ</description>
    <label>Minimum Ten Square Meters North Facing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>