force-app/main/default/objects/Lead/fields/Opportunity_Owner_When_HLHC_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_When_HLHC_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner When HLHC Created</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>