force-app/main/default/objects/Lead/fields/Opportunity_Stage_When_HLHC_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_When_HLHC_Created__c</fullName>
    <label>Opportunity Stage When HLHC Created</label>
    <length>50</length>
    <type>Text</type>
</CustomField>