force-app/main/default/objects/Lead/fields/ownTheRoofSpace__c.field-meta.xml
<CustomField>
    <fullName>ownTheRoofSpace__c</fullName>
    <label>ownTheRoofSpace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>