force-app/main/default/objects/Lead/fields/Pardot_Marketing_Tag__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Marketing_Tag__c</fullName>
    <label>Pardot Marketing Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New SQ leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>