force-app/main/default/objects/Lead/fields/Point_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Origin__c</fullName>
    <label>Point of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SolarQuotes API</fullName>
            </value>
            <value>
                <fullName>Referral Page</fullName>
            </value>
            <value>
                <fullName>Website Contact Form</fullName>
            </value>
            <value>
                <fullName>Website Quote / Application</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>1300 number</fullName>
            </value>
            <value>
                <fullName>Direct Adviser Call</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Solar@parkerlane</fullName>
            </value>
            <value>
                <fullName>Hello@parkerlane</fullName>
            </value>
            <value>
                <fullName>98% Loan for First Home Buyers</fullName>
            </value>
            <value>
                <fullName>90% No LMI Everyday Heroes</fullName>
            </value>
            <value>
                <fullName>Screw Waiting General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>