force-app/main/default/objects/Lead/fields/Privacy_Statement_Read_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Statement_Read_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Statement Read to Client</label>
    <type>Checkbox</type>
</CustomField>