force-app/main/default/objects/Lead/fields/Proceed_with_solar__c.field-meta.xml
<CustomField>
    <fullName>Proceed_with_solar__c</fullName>
    <label>Proceed with solar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No - won&apos;t consider</fullName>
            </value>
            <value>
                <fullName>No - would consider</fullName>
            </value>
            <value>
                <fullName>Yes - panels</fullName>
            </value>
            <value>
                <fullName>Yes - panels &amp; battery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>